--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.9",
-        "autoprefixer": "^10.4.20",
+        "@tailwindcss/postcss": "^4.0.15",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
-        "tailwindcss": "^3.4.16",
+        "tailwindcss": "^4.0.15",
         "vite": "^6.0"
     },
     "dependencies": {
-        "preline": "^2.6.0"
+        "@tailwindcss/vite": "^4.0.15",
+        "preline": "^3.0.1",
+        "vanilla-calendar-pro": "^3.0.3"
     }
 }
