--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "buglinjo/laravel-webp": "^3.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "spatie/laravel-permission": "^6.16",
         "tallstackui/tallstackui": "^2.2.3"
     },
     "require-dev": {
