--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "opcodesio/log-viewer": "^3.15",
         "spatie/laravel-permission": "^6.16",
         "tallstackui/tallstackui": "^2.2.3"
     },
@@ -28,7 +29,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/FormatHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -58,7 +62,8 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+            ]
         }
     },
     "config": {
