--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 LOG_VIEWER_ENABLED=true
+
+TALLSTACKUI_ICON_TYPE="secondnetwork/blade-tabler-icons"
