--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_DATABASE=staterkit-laravel-12
 DB_USERNAME=
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,16 +35,16 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
-CACHE_PREFIX=
+CACHE_STORE=redis
+CACHE_PREFIX=starterkit_
 
 TALLSTACKUI_PREFIX='ts-'
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
