--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "opcodesio/log-viewer": "^3.15",
+        "predis/predis": "^3.0",
         "secondnetwork/blade-tabler-icons": "^3.34",
         "spatie/laravel-permission": "^6.16",
         "spatie/livewire-filepond": "^1.4",
